[tool.black]
line_length = 88

[tool.coverage.run]
branch = true
source = ["aiohttp_tus"]

[tool.coverage.paths]
source = ["aiohttp_tus/"]

[tool.coverage.report]
fail_under = 85
skip_covered = true
show_missing = true

[tool.poetry]
name = "aiohttp-tus"
version = "1.0.0rc0"
description = "tus.io protocol implementation for aiohttp.web applications"
authors = ["Igor Davydenko <iam@igordavydenko.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/pylotcode/aiohttp-tus"
documentation = "https://aiohttp-tus.readthedocs.io/"
keywords = ["aiohttp", "tus", "tus.io"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Typing :: Typed"
]
include = ["CHANGELOG.rst"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
aiohttp-jinja2 = "^1.2.0"
async_generator = {version = "^1.10", python = "~3.6"}
coverage = {extras = ["toml"], version = "^5.0.3"}
humanfriendly = "^8.1"
pytest = "^5.3.5"
pytest-aiohttp = "^0.3.0"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8.1"
"tus.py" = "^1.3.4"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38
skipsdist = True

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38

[testenv]
passenv =
    PYTHONPATH
    PYTEST_ADDOPTS
setenv =
    PYTHONPATH=.
skip_install = True
whitelist_externals = poetry
commands_pre =
    poetry install
commands =
    poetry run python -m pytest tests/ --cov --no-cov-on-fail
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
